fixed horizontal scrollbar on index.html

--- a/css/_images.css
+++ b/css/_images.css
@@ -9,7 +9,7 @@
 	padding: 1rem;
 }
 .gamehub-logobanner-small {
-	width: 100vw;
+	max-width: 100%;
 }
 .success-icon {
 	display: flex;
